// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correct without extension 1`] = `
.emotion-5 {
  border-radius: 4px;
  background-color: #FFFFFF;
  -webkit-transition: box-shadow .2s ease;
  transition: box-shadow .2s ease;
}

.emotion-5:focus {
  outline: none;
  position: relative;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-4 {
  border: 1px solid#696979;
  border-radius: 4px;
  cursor: pointer;
  padding: 0.25em;
}

.emotion-3 {
  border: 1px dashed transparent;
  border-radius: 4px;
  padding: 0.52em;
}

.emotion-10 {
  background-color: #FFFFFF;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-11 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 1rem;
}

.emotion-2 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: minmax(min-content,max-content);
  grid-gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-0 {
  fill: #696979;
  font-size: 1.5rem;
}

.emotion-9 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
}

.emotion-1 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  color: #696979;
  font-size: 0.875rem;
  font-weight: bold;
}

.emotion-12 {
  border-radius: 4px;
  border-bottom: 1px solid #D3D4DD;
  border-left: 1px solid #D3D4DD;
  border-right: 1px solid #D3D4DD;
  padding: 1rem;
  background-color: #FFFFFF;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  color: #696979;
  font-weight: bold;
  background-color: #F0F0F5;
  border: 1px solid #D3D4DD;
  padding: 1rem;
}

.emotion-8 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  font-weight: bold;
  margin-right: 10px;
}

.emotion-7 {
  fill: #0069D0;
  font-size: 1rem;
  margin-right: 5px;
}

<div>
  <div
    class="emotion-5"
    tabindex="0"
  >
    <input
      autocomplete="off"
      multiple=""
      style="display: none;"
      tabindex="-1"
      type="file"
    />
    <div
      class="emotion-4"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-2"
        >
          <svg
            aria-hidden="true"
            class="emotion-0"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              clip-rule="evenodd"
              d="M13 7.414V15c0 .667-.333 1-1 1s-1-.333-1-1V7.414l-3.293 3.293a1 1 0 11-1.414-1.414l5-5a1 1 0 011.414 0l5.001 5.001a1 1 0 01-1.414 1.414L13 7.414zM4 19c.002-.667.335-1 1-1h14c.667-.004 1 .33 1 1.001 0 .672-.333 1.005-1 .999H5.002c-.67 0-1.004-.334-1.002-1z"
            />
          </svg>
          <span
            class="emotion-1"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="emotion-12"
  >
    <span
      class="emotion-6"
    />
    <div
      class="emotion-11"
    >
      <div
        class="emotion-10"
      >
        <svg
          aria-hidden="true"
          class="emotion-7"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            clip-rule="evenodd"
            d="M18.294 6.293a1 1 0 111.414 1.414l-9 9a1 1 0 01-1.414 0l-5.001-5.001a1 1 0 011.414-1.414l4.294 4.294 8.293-8.293z"
          />
        </svg>
        <span
          class="emotion-8"
        >
          teste.pdf
        </span>
        <span
          class="emotion-9"
        >
          0 Bytes
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly at initial state 1`] = `
.emotion-5 {
  border-radius: 4px;
  background-color: #FFFFFF;
  -webkit-transition: box-shadow .2s ease;
  transition: box-shadow .2s ease;
}

.emotion-5:focus {
  outline: none;
  position: relative;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-4 {
  border: 1px solid#696979;
  border-radius: 4px;
  cursor: pointer;
  padding: 0.25em;
}

.emotion-3 {
  border: 1px dashed transparent;
  border-radius: 4px;
  padding: 0.52em;
}

.emotion-2 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: minmax(min-content,max-content);
  grid-gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-0 {
  fill: #696979;
  font-size: 1.5rem;
}

.emotion-1 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  color: #696979;
  font-size: 0.875rem;
  font-weight: bold;
}

<div>
  <div
    class="emotion-5"
    tabindex="0"
  >
    <input
      autocomplete="off"
      multiple=""
      style="display: none;"
      tabindex="-1"
      type="file"
    />
    <div
      class="emotion-4"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-2"
        >
          <svg
            aria-hidden="true"
            class="emotion-0"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              clip-rule="evenodd"
              d="M13 7.414V15c0 .667-.333 1-1 1s-1-.333-1-1V7.414l-3.293 3.293a1 1 0 11-1.414-1.414l5-5a1 1 0 011.414 0l5.001 5.001a1 1 0 01-1.414 1.414L13 7.414zM4 19c.002-.667.335-1 1-1h14c.667-.004 1 .33 1 1.001 0 .672-.333 1.005-1 .999H5.002c-.67 0-1.004-.334-1.002-1z"
            />
          </svg>
          <span
            class="emotion-1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly at uploading state 1`] = `
.emotion-5 {
  border-radius: 4px;
  background-color: #FFFFFF;
  -webkit-transition: box-shadow .2s ease;
  transition: box-shadow .2s ease;
}

.emotion-5:focus {
  outline: none;
  position: relative;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-4 {
  border: 1px solid#696979;
  border-radius: 4px;
  cursor: pointer;
  padding: 0.25em;
}

.emotion-3 {
  border: 1px dashed transparent;
  border-radius: 4px;
  padding: 0.52em;
}

.emotion-9 {
  background-color: #FFFFFF;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-11 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 1rem;
}

.emotion-2 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: minmax(min-content,max-content);
  grid-gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-0 {
  fill: #696979;
  font-size: 1.5rem;
}

.emotion-8 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
}

.emotion-1 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  color: #696979;
  font-size: 0.875rem;
  font-weight: bold;
}

.emotion-12 {
  border-radius: 4px;
  border-bottom: 1px solid #D3D4DD;
  border-left: 1px solid #D3D4DD;
  border-right: 1px solid #D3D4DD;
  padding: 1rem;
  background-color: #FFFFFF;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  color: #696979;
  font-weight: bold;
  background-color: #F0F0F5;
  border: 1px solid #D3D4DD;
  padding: 1rem;
}

.emotion-7 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  font-weight: bold;
  margin-right: 10px;
}

.emotion-10 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  height: 4px;
  width: 100%;
}

.emotion-10::-webkit-progress-bar {
  background-color: #F0F0F5;
  border-radius: 4px;
}

.emotion-10::-webkit-progress-value {
  background-color: #0069D0;
  border-radius: 4px;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.emotion-10::-moz-progress-bar {
  background-color: #0069D0;
  border-radius: 4px;
  -webkit-transition: all .3s;
  transition: all .3s;
}

<div>
  <div
    class="emotion-5"
    tabindex="0"
  >
    <input
      autocomplete="off"
      multiple=""
      style="display: none;"
      tabindex="-1"
      type="file"
    />
    <div
      class="emotion-4"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-2"
        >
          <svg
            aria-hidden="true"
            class="emotion-0"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              clip-rule="evenodd"
              d="M13 7.414V15c0 .667-.333 1-1 1s-1-.333-1-1V7.414l-3.293 3.293a1 1 0 11-1.414-1.414l5-5a1 1 0 011.414 0l5.001 5.001a1 1 0 01-1.414 1.414L13 7.414zM4 19c.002-.667.335-1 1-1h14c.667-.004 1 .33 1 1.001 0 .672-.333 1.005-1 .999H5.002c-.67 0-1.004-.334-1.002-1z"
            />
          </svg>
          <span
            class="emotion-1"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="emotion-12"
  >
    <span
      class="emotion-6"
    >
      pdf
    </span>
    <div
      class="emotion-11"
    >
      <div
        class="emotion-9"
      >
        <span
          class="emotion-7"
        >
          teste.pdf
        </span>
        <span
          class="emotion-8"
        >
          0 Bytes
        </span>
      </div>
      <progress
        class="emotion-10"
        max="100"
        value="40"
      />
    </div>
  </div>
</div>
`;

exports[`should render correctly complete state 1`] = `
.emotion-5 {
  border-radius: 4px;
  background-color: #FFFFFF;
  -webkit-transition: box-shadow .2s ease;
  transition: box-shadow .2s ease;
}

.emotion-5:focus {
  outline: none;
  position: relative;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-4 {
  border: 1px solid#696979;
  border-radius: 4px;
  cursor: pointer;
  padding: 0.25em;
}

.emotion-3 {
  border: 1px dashed transparent;
  border-radius: 4px;
  padding: 0.52em;
}

.emotion-10 {
  background-color: #FFFFFF;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-11 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 1rem;
}

.emotion-2 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: minmax(min-content,max-content);
  grid-gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-0 {
  fill: #696979;
  font-size: 1.5rem;
}

.emotion-9 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
}

.emotion-1 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  color: #696979;
  font-size: 0.875rem;
  font-weight: bold;
}

.emotion-12 {
  border-radius: 4px;
  border-bottom: 1px solid #D3D4DD;
  border-left: 1px solid #D3D4DD;
  border-right: 1px solid #D3D4DD;
  padding: 1rem;
  background-color: #FFFFFF;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  color: #696979;
  font-weight: bold;
  background-color: #F0F0F5;
  border: 1px solid #D3D4DD;
  padding: 1rem;
}

.emotion-8 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  font-weight: bold;
  margin-right: 10px;
}

.emotion-7 {
  fill: #0069D0;
  font-size: 1rem;
  margin-right: 5px;
}

<div>
  <div
    class="emotion-5"
    tabindex="0"
  >
    <input
      autocomplete="off"
      multiple=""
      style="display: none;"
      tabindex="-1"
      type="file"
    />
    <div
      class="emotion-4"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-2"
        >
          <svg
            aria-hidden="true"
            class="emotion-0"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              clip-rule="evenodd"
              d="M13 7.414V15c0 .667-.333 1-1 1s-1-.333-1-1V7.414l-3.293 3.293a1 1 0 11-1.414-1.414l5-5a1 1 0 011.414 0l5.001 5.001a1 1 0 01-1.414 1.414L13 7.414zM4 19c.002-.667.335-1 1-1h14c.667-.004 1 .33 1 1.001 0 .672-.333 1.005-1 .999H5.002c-.67 0-1.004-.334-1.002-1z"
            />
          </svg>
          <span
            class="emotion-1"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="emotion-12"
  >
    <span
      class="emotion-6"
    >
      pdf
    </span>
    <div
      class="emotion-11"
    >
      <div
        class="emotion-10"
      >
        <svg
          aria-hidden="true"
          class="emotion-7"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            clip-rule="evenodd"
            d="M18.294 6.293a1 1 0 111.414 1.414l-9 9a1 1 0 01-1.414 0l-5.001-5.001a1 1 0 011.414-1.414l4.294 4.294 8.293-8.293z"
          />
        </svg>
        <span
          class="emotion-8"
        >
          teste.pdf
        </span>
        <span
          class="emotion-9"
        >
          0 Bytes
        </span>
      </div>
    </div>
  </div>
</div>
`;
